tests/invalid/coerce_recursive_inst.err_exp
coerce_recursive_inst.m:042: In clause for
coerce_recursive_inst.m:042:   `bad1(in(coerce_recursive_inst.cons)) =
coerce_recursive_inst.m:042:   out(coerce_recursive_inst.cons)':
coerce_recursive_inst.m:042:   in coerce expression:
coerce_recursive_inst.m:042:   mode error: in the coerced term:
coerce_recursive_inst.m:042:   in the first argument of function symbol `cons':
coerce_recursive_inst.m:042:   cannot convert the [38;5;87mcoerced subterm[39;49m from type
coerce_recursive_inst.m:042:   `coerce_recursive_inst.fruit' to
coerce_recursive_inst.m:042:   `coerce_recursive_inst.citrus' because it has
coerce_recursive_inst.m:042:   instantiatedness [38;5;203m`ground',[39;49m and
coerce_recursive_inst.m:042:   [38;5;203m`coerce_recursive_inst.fruit'[39;49m is not a subtype
coerce_recursive_inst.m:042:   of `coerce_recursive_inst.citrus'.
coerce_recursive_inst.m:048: In clause for
coerce_recursive_inst.m:048:   `bad2(in(coerce_recursive_inst.cons)) = out':
coerce_recursive_inst.m:048:   in coerce expression:
coerce_recursive_inst.m:048:   mode error: in the coerced term:
coerce_recursive_inst.m:048:   in the first argument of function symbol `cons':
coerce_recursive_inst.m:048:   cannot convert the [38;5;87mcoerced subterm[39;49m from type
coerce_recursive_inst.m:048:   `coerce_recursive_inst.fruit' to
coerce_recursive_inst.m:048:   `coerce_recursive_inst.citrus' because it has
coerce_recursive_inst.m:048:   instantiatedness [38;5;203m`ground',[39;49m and
coerce_recursive_inst.m:048:   [38;5;203m`coerce_recursive_inst.fruit'[39;49m is not a subtype
coerce_recursive_inst.m:048:   of `coerce_recursive_inst.citrus'.
